fixed navbar background, added figma template styles and wrapped header links with  <a> tags

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap'); */
+
 * {
   margin: 0;
   padding: 0;
@@ -7,15 +9,15 @@
 body {
   height: 100vh;
   background-color: white;
-  background-image: url("images/header-illsutration-mobile@2x.png");
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .navbar {
   margin: 10px;
+  padding: 10px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  background: white;
 }
 
 .navItem {
@@ -24,21 +26,30 @@ body {
 }
 
 .navbar h2 {
-  color: black;
+  color: #28352f;
   font-style: normal;
-  font-family: sans-serif, "Inter";
+  font-family: "Inter", sans-serif;
   font-size: 20px;
   line-height: 28px;
+  font-weight: 600;
 }
 
-/* main */
+.navbar i {
+  color: #28352f;
+}
+
+.navbar .navItem {
+  text-decoration: none;
+}
 
 .content-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-image: url("images/header-illsutration-mobile@2x.png");
+  background-size: cover;
+  background-repeat: repeat;
   align-items: center;
-  height: 100vh;
 }
 
 article {
@@ -47,18 +58,30 @@ article {
 
 p {
   text-align: center;
-  margin: 24px;
-  margin-top: 60px;
-  margin-bottom: 60px;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-top: 28px;
+  margin-bottom: 50px;
+  line-height: 28px;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+  font-family: "Inter", sans-serif;
+  color: #172b4d;
 }
 
 h1 {
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
   text-align: center;
   color: #172b4d;
   padding: 10px;
-  margin: 24px;
-  margin-bottom: 8px;
-  margin-top: 24px;
+  margin-right: 24px;
+  margin-left: 24px;
+  margin-top: 50px;
 }
 
 .profession {
@@ -67,13 +90,17 @@ h1 {
 
 .socilaLinks {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
+  flex-direction: row;
   justify-content: space-around;
   align-items: center;
   list-style: none;
+  margin-left: 102.42;
+  margin-right: 102.42;
+  height: 20px;
+  margin-bottom: 70px;
 }
 
 .socilaLinks li {
-  margin: 13px;
+  margin: 10px;
 }
